<resources>
  <string name="app_name">EnergyCodeSmells</string>
  <string name="title_igsu">IGSU</string>
  <string name="title_hmu">HMU</string>
  <string name="title_mim">MIM</string>
</resources>
