<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

  <item
    android:id="@+id/navigation_hmu"
    android:icon="@drawable/ic_dashboard_black_24dp"
    android:title="@string/title_hmu"/>

  <item
    android:id="@+id/navigation_igsu"
    android:icon="@drawable/ic_home_black_24dp"
    android:title="@string/title_igsu"/>

  <item
    android:id="@+id/navigation_mim"
    android:icon="@drawable/ic_notifications_black_24dp"
    android:title="@string/title_mim"/>

</menu>
